# 15days

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  fbb2json.bat  fbs.py  gen.bat  json2fbb.bat
include/fbg/: SaveFile_generated.h  resourcedb_generated.h
src/: depot.h  input_system.cpp  input_system.h  main.cpp
src/SoLoud/audiosource/wav/: soloud_wav.cpp  soloud_wavstream.cpp  stb_vorbis_impl.cpp
src/SoLoud/backend/sdl2_static/: soloud_sdl2_static.cpp
src/common/: arena.cpp  arena.h  basic.cpp  basic.h  button_state.h  clock.h  collision.h  command.h  draw_list.h  error.h  force.h  game_state.h  input.h  message.h  missing_ogg.h
src/facets/: attach.h  audio_buffer.h  body.h  card.h  combat.h  cursor.h  deck.h  depot.cpp  depot.h  effect.h  facet.h  font.h  fps_counter.h  histogram.h  keymap.h  map.h  material.h  physics_body.h  position.h  sound.h  sprite.cpp  sprite.h  text.cpp  text.h  texture.h  trigger.h
src/fbs/: SaveFile.fbs  resourcedb.fbs
src/systems/: audio_system.cpp  audio_system.h  card_system.cpp  card_system.h  collision_system.cpp  collision_system.h  combat_system.cpp  combat_system.h  cursor_system.cpp  cursor_system.h  effect_system.cpp  effect_system.h  event_system_sdl.cpp  event_system_sdl.h  fps_counter_system.cpp  fps_counter_system.h  histogram_system.cpp  histogram_system.h  input_system.cpp  input_system.h  map_system.cpp  map_system.h  movement_system.cpp  movement_system.h  physics_system.cpp  physics_system.h  render_system.cpp  render_system.h  sprite_system.cpp  sprite_system.h  text_system.cpp  text_system.h  trigger_system.cpp  trigger_system.h
